// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResultsExamQuestionManualScore /> fi-FI renders with displayNumber where there are more than one answer 1`] = `
<div
  className="e-result-scorecount e-float-right e-mrg-b-1"
>
  <sup
    className="e-result-scorecount-sup e-mrg-r-1"
  >
    1
  </sup>
  <div
    className="e-color-black"
  >
    <span
      className="e-mrg-r-1 e-nowrap e-nowrap e-font-size-m"
    >
      <b>
        1
      </b>
       / 6
       p.
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-result-scorecount-shortcode"
    >
      
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-mrg-r-0"
    >
      va
    </span>
  </div>
</div>
`;

exports[`<ResultsExamQuestionManualScore /> fi-FI renders with pregrading and one censor scores 1`] = `
<div
  className="e-result-scorecount e-float-right e-mrg-b-1"
>
  <div
    className="e-color-black"
  >
    <span
      className="e-mrg-r-1 e-nowrap e-nowrap e-font-size-m"
    >
      <b>
        4
      </b>
       / 6
       p.
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-result-scorecount-shortcode"
    >
      SE3
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-mrg-r-0"
    >
      1.s
    </span>
  </div>
  <div
    className="e-color-grey e-font-size-xs"
  >
    <span
      className="e-mrg-r-1 e-nowrap e-nowrap"
    >
      1
      
       p.
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-result-scorecount-shortcode"
    >
      
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-mrg-r-0"
    >
      va
    </span>
  </div>
</div>
`;

exports[`<ResultsExamQuestionManualScore /> fi-FI renders with pregrading and three censor scores 1`] = `
<div
  className="e-result-scorecount e-float-right e-mrg-b-1"
>
  <div
    className="e-color-black"
  >
    <span
      className="e-mrg-r-1 e-nowrap e-nowrap e-font-size-m"
    >
      <b>
        4
      </b>
       / 6
       p.
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-result-scorecount-shortcode"
    >
      SE3
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-mrg-r-0"
    >
      3.s
    </span>
  </div>
  <div
    className="e-color-grey e-font-size-xs"
  >
    <span
      className="e-mrg-r-1 e-nowrap e-nowrap"
    >
      3
      
       p.
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-result-scorecount-shortcode"
    >
      SE2
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-mrg-r-0"
    >
      2.s
    </span>
  </div>
  <div
    className="e-color-grey e-font-size-xs"
  >
    <span
      className="e-mrg-r-1 e-nowrap e-nowrap"
    >
      2
      
       p.
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-result-scorecount-shortcode"
    >
      SE1
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-mrg-r-0"
    >
      1.s
    </span>
  </div>
  <div
    className="e-color-grey e-font-size-xs"
  >
    <span
      className="e-mrg-r-1 e-nowrap e-nowrap"
    >
      1
      
       p.
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-result-scorecount-shortcode"
    >
      
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-mrg-r-0"
    >
      va
    </span>
  </div>
</div>
`;

exports[`<ResultsExamQuestionManualScore /> fi-FI renders with pregrading score 1`] = `
<div
  className="e-result-scorecount e-float-right e-mrg-b-1"
>
  <div
    className="e-color-black"
  >
    <span
      className="e-mrg-r-1 e-nowrap e-nowrap e-font-size-m"
    >
      <b>
        1
      </b>
       / 6
       p.
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-result-scorecount-shortcode"
    >
      
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-mrg-r-0"
    >
      va
    </span>
  </div>
</div>
`;

exports[`<ResultsExamQuestionManualScore /> fi-FI renders with pregrading, censor and inspection scores 1`] = `
<div
  className="e-result-scorecount e-float-right e-mrg-b-1"
>
  <div
    className="e-color-black"
  >
    <span
      className="e-mrg-r-1 e-nowrap e-nowrap e-font-size-m"
    >
      <b>
        5
      </b>
       / 6
       p.
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-result-scorecount-shortcode"
    >
      IN1, IN2
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-mrg-r-0"
    >
      ta
    </span>
  </div>
  <div
    className="e-color-grey e-font-size-xs"
  >
    <span
      className="e-mrg-r-1 e-nowrap e-nowrap"
    >
      4
      
       p.
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-result-scorecount-shortcode"
    >
      SE3
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-mrg-r-0"
    >
      3.s
    </span>
  </div>
  <div
    className="e-color-grey e-font-size-xs"
  >
    <span
      className="e-mrg-r-1 e-nowrap e-nowrap"
    >
      3
      
       p.
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-result-scorecount-shortcode"
    >
      SE2
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-mrg-r-0"
    >
      2.s
    </span>
  </div>
  <div
    className="e-color-grey e-font-size-xs"
  >
    <span
      className="e-mrg-r-1 e-nowrap e-nowrap"
    >
      2
      
       p.
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-result-scorecount-shortcode"
    >
      SE1
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-mrg-r-0"
    >
      1.s
    </span>
  </div>
  <div
    className="e-color-grey e-font-size-xs"
  >
    <span
      className="e-mrg-r-1 e-nowrap e-nowrap"
    >
      1
      
       p.
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-result-scorecount-shortcode"
    >
      
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-mrg-r-0"
    >
      va
    </span>
  </div>
</div>
`;

exports[`<ResultsExamQuestionManualScore /> fi-FI renders without score 1`] = `
<div
  className="e-result-scorecount e-float-right e-mrg-b-1"
>
  <span
    className="e-result-scorecount-empty"
  />
   / 6 
   p.
</div>
`;

exports[`<ResultsExamQuestionManualScore /> sv-FI renders with pregrading, censor and inspection scores 1`] = `
<div
  className="e-result-scorecount e-float-right e-mrg-b-1"
>
  <div
    className="e-color-black"
  >
    <span
      className="e-mrg-r-1 e-nowrap e-nowrap e-font-size-m"
    >
      <b>
        5
      </b>
       / 6
       p.
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-result-scorecount-shortcode"
    >
      IN1, IN2
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-mrg-r-0"
    >
      ta
    </span>
  </div>
  <div
    className="e-color-grey e-font-size-xs"
  >
    <span
      className="e-mrg-r-1 e-nowrap e-nowrap"
    >
      4
      
       p.
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-result-scorecount-shortcode"
    >
      SE3
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-mrg-r-0"
    >
      3.s
    </span>
  </div>
  <div
    className="e-color-grey e-font-size-xs"
  >
    <span
      className="e-mrg-r-1 e-nowrap e-nowrap"
    >
      3
      
       p.
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-result-scorecount-shortcode"
    >
      SE2
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-mrg-r-0"
    >
      2.s
    </span>
  </div>
  <div
    className="e-color-grey e-font-size-xs"
  >
    <span
      className="e-mrg-r-1 e-nowrap e-nowrap"
    >
      2
      
       p.
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-result-scorecount-shortcode"
    >
      SE1
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-mrg-r-0"
    >
      1.s
    </span>
  </div>
  <div
    className="e-color-grey e-font-size-xs"
  >
    <span
      className="e-mrg-r-1 e-nowrap e-nowrap"
    >
      1
      
       p.
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-result-scorecount-shortcode"
    >
      
    </span>
    <span
      className="e-mrg-r-1 e-nowrap e-mrg-r-0"
    >
      va
    </span>
  </div>
</div>
`;
